--- a/Menu.html
+++ b/Menu.html
@@ -1,1 +1,21 @@
 
+<!DOCTYPE html>
+
+<html lang="pt-br">
+    <head>
+        <meta charset="utf-8">
+        <title>Menu - Estatística Descritiva</title>
+        <meta name="description" content="Este é um site referente à estudos de Estrutura de Dados">
+    </head>
+    <body>
+        <h1>MENU - Estrutura de Dados</h1>
+        <p> Este é um site referente a <strong>estudos sobre o Estatística Descritiva</strong>.</p>
+        <p> Escolha uma das opções abaixo: </p>
+        <strong>&rharu;</strong> 
+            <a href="https://danielatllas.github.io/EstatisticaDescritiva/Introducao">
+                Introdução
+            </a>
+        <br>
+
+    </body>
+</html>
