--- a/Menu.html
+++ b/Menu.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Este é um site referente à estudos de Estrutura de Dados">
     </head>
     <body>
-        <h1>MENU - Estrutura de Dados</h1>
+        <h1>MENU - Estatística Descritiva</h1>
         <p> Este é um site referente a <strong>estudos sobre o Estatística Descritiva</strong>.</p>
         <p> Escolha uma das opções abaixo: </p>
         <strong>&rharu;</strong> 
