--- a/Menu.html
+++ b/Menu.html
@@ -16,6 +16,10 @@
                 Introdução
             </a>
         <br>
-
+        <strong>&rharu;</strong> 
+            <a href="https://danielatllas.github.io/EstatisticaDescritiva/DistribuicaoFreq">
+                Distribuição de Frequência
+            </a>
+        <br>
     </body>
 </html>
