--- a/Menu.html
+++ b/Menu.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html lang="pt-br">
@@ -18,7 +17,12 @@
         <br>
         <strong>&rharu;</strong> 
             <a href="https://danielatllas.github.io/EstatisticaDescritiva/DistribuicaoFreq">
-                Distribuição de Frequência
+                Distribuião de frequência
+            </a>
+        <br>
+        <strong>&rharu;</strong> 
+            <a href="https://danielatllas.github.io/EstatisticaDescritiva/DistribuicaoClass">
+                Distribuião de frequência por classes
             </a>
         <br>
     </body>
